# CAP_MONOREPO

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: test.yml
apps/api-gateway/: Dockerfile  jest.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api-gateway/src/: app.ts  index.ts
apps/api-gateway/src/config/: env.ts
apps/api-gateway/src/middleware/: auth.test.ts  error-handler.test.ts
apps/api-gateway/src/routes/: auth.test.ts  auth.ts  health.test.ts  health.ts
apps/oauth-service/: .eslintrc.cjs  Dockerfile  jest.config.js  package.json  tsconfig.json  tsconfig.test.json
apps/oauth-service/src/: app.ts  index.ts
apps/oauth-service/src/config/: env.ts
apps/oauth-service/src/controllers/: auth.controller.ts
apps/oauth-service/src/middleware/: auth.ts  error-handler.ts
apps/oauth-service/src/routes/: auth.ts  health.test.ts  health.ts
apps/python-service/: Dockerfile  README.md  pyproject.toml
apps/python-service/app/: __init__.py  config.py  main.py
apps/python-service/app/routes/: health.py
apps/python-service/tests/: test_health.py
docker/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
docs/: PROJECT_PLAN.md
scripts/: create-package.sh  create-python-service.sh  create-ts-service.sh
